# iriai-buildv2-service

./: .gitignore  CLAUDE.md  SLACK_BRIDGE_SETUP.md  bug-report.json  dashboard.py  pyproject.toml  schema.sql
.iriai/: beced7b1-plan-review-context.md  handoff-subfeature-decomposition-A.md  handoff-subfeature-decomposition-B.md  handoff-subfeature-decomposition-C.md  handoff-subfeature-decomposition-D.md  handoff-subfeature-decomposition.md
.playwright-mcp/: page-2026-04-28T18-30-57-447Z.yml  page-2026-04-29T19-41-32-351Z.yml  page-2026-04-29T20-02-41-649Z.yml  page-2026-04-29T20-11-58-983Z.yml
.tmp/: repair_8ac124d6_dag_header.py
dashboard-ui/: package-lock.json  package.json  vite.config.ts
docs/: compile-parallelism-resumability-design.md  compile-resumability-implementation-plan.md  dag-execution-learnings.md  dag-pipeline-improvement-opportunities.md  dag-pipeline-retrospective.md  install-claude-pool-launchagents.sh  kaya-submittal-handover-prompt-v10.md  kaya-submittal-handover-prompt-v11.md  kaya-submittal-handover-prompt-v12.md  mac-mini-agent-worker-setup.md  operator-driver-runbook.md  supervisor-agent-plan.md  supervisor-failure-taxonomy.md  supervisor-verification-plan.md  workflow-improvement-proposals.md  workflow-runner-unblocker-prompt.md
tests/: _canonical_governance_shards.py  isolation_guard.py  test_atomic_landing.py  test_cli_resume.py  test_commit_provenance.py  test_compose_compat.py  test_context_layer_dispatcher_gate_identity.py  test_context_layer_models.py  test_context_layer_native_git.py  test_context_layer_package.py  test_counterfactual_replay.py  test_dashboard_bugflow.py  test_db.py  test_db_safety.py  test_execution_control_adoption.py  test_execution_control_adoption_migration.py  test_execution_control_commit_provenance.py  test_execution_control_commit_provenance_lineage.py  test_execution_control_commit_provenance_reader.py  test_execution_control_commit_provenance_writer.py  test_execution_control_completeness.py  test_execution_control_consumer_read_api.py  test_execution_control_counterfactual_event_replay.py  test_execution_control_counterfactual_metrics_comparator.py  test_execution_control_counterfactual_replay.py  test_execution_control_decision_record_writer.py  (+61 more)
(+1140 files in other folders)
