[project]
name = "iriai-build-v2"
version = "0.1.0"
description = "Agent orchestration build system powered by iriai-compose"
requires-python = ">=3.11"
dependencies = [
    "iriai-compose[terminal]>=0.3.0,<0.4.0",
    "iriai-preview",
    "asyncpg>=0.29",
    "mcp>=1.0",
    "pydantic>=2.0",
    "click>=8.0",
    "playwright>=1.40",
    "pytest-playwright>=0.4",
    "pytest-json-report>=1.5",
]

[project.optional-dependencies]
slack = ["slack-sdk>=3.26", "aiohttp>=3.9"]

[project.scripts]
iriai-build-v2 = "iriai_build_v2.interfaces.cli.app:main"
iriai-dag-regroup = "iriai_build_v2.workflows.develop.dag_regroup:main"
claude-pool-runner = "iriai_build_v2.runtimes.claude_pool_runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iriai_build_v2"]
